--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.3",
-    "lint-staged": "^10.0.9"
+    "lint-staged": "^10.0.9",
+    "prettier": "2.0.4"
   }
 }
